質問使ったら普通に挙動するはず(改）

--- a/index.scss
+++ b/index.scss
@@ -63,7 +63,6 @@
 
   // }
 
-  
 
 
 #interaction_part{
@@ -76,4 +75,9 @@
 .log_button{
   text-align: right;
 
+}
+
+#plot_extraction{
+
+  border: solid 3px black;
 }
