--- a/index.scss
+++ b/index.scss
@@ -67,7 +67,7 @@
 
 #interaction_part{
 
-  height: 500px;
+  //height: 500px;
 
   border: 1px solid lightblue;
 }
@@ -79,5 +79,6 @@
 
 #plot_extraction{
 
-  border: solid 3px black;
+  width: 50%;
+  border: solid 1px black;
 }
